--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -48,38 +48,41 @@
         <main class="mdl-layout__content">
             <div class="page-content">
                 <div class="mdl-grid">
-                    <div class="mdl-cell mdl-cell--12-col">
+                    <div class="mdl-cell mdl-cell--4-col-tablet mdl-cell--12-col">
                         <div class="timer">
                             <div id="h">0</div>:
                             <div id="m">0</div>:
                             <div id="s">10</div>
                         </div>
                     </div>
-                </div>
-                <div class="mdl-grid">
-                    <div class="mdl-cell mdl-cell--12-col">
-                        <p style="width:100%">
-                            <input class="mdl-slider mdl-js-slider" type="range" id="shh" min="0" max="1000" value="0"
-                                step="1">
-                        </p>
-                    </div>
-                    <div class="mdl-cell mdl-cell--12-col">
-                        <p style="width:100%">
-                            <input class="mdl-slider mdl-js-slider" type="range" id="sh" min="0" max="100" value="0"
-                                step="1">
-                        </p>
-                    </div>
-                    <div class="mdl-cell mdl-cell--12-col">
-                        <p style="width:100%">
-                            <input class="mdl-slider mdl-js-slider" type="range" id="sm" min="0" max="60" value="0"
-                                step="1">
-                        </p>
-                    </div>
-                    <div class="mdl-cell mdl-cell--12-col">
-                        <p style="width:100%">
-                            <input class="mdl-slider mdl-js-slider" type="range" id="ss" min="0" max="60" value="10"
-                                step="1">
-                        </p>
+                    <div class="mdl-cell mdl-cell--4-col-tablet mdl-cell--12-col">
+                        <div class="mdl-grid">
+
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="shh" min="0" max="1000"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="sh" min="0" max="100"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="sm" min="0" max="60"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="ss" min="0" max="60"
+                                        value="10" step="1">
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="mdl-grid">
