--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,8 +18,9 @@
     under the License.
 -->
 <html>
-    <head>
-        <!--
+
+<head>
+    <!--
         Customize this policy to fit your own app's needs. For more guidance, see:
             https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
         Some notes:
@@ -28,22 +29,80 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <link rel="stylesheet" href="css/material.min.css">
+    <link rel="stylesheet" href="css/iconfont/material-icons.css">
+
+    <title>Timer</title>
+</head>
+
+<body>
+    <div id="app" class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+
+        <main class="mdl-layout__content">
+            <div class="page-content">
+                <div class="mdl-grid">
+                    <div class="mdl-cell mdl-cell--4-col-tablet mdl-cell--12-col">
+                        <div class="timer">
+                            <div id="h">0</div>:
+                            <div id="m">0</div>:
+                            <div id="s">10</div>
+                        </div>
+                    </div>
+                    <div class="mdl-cell mdl-cell--4-col-tablet mdl-cell--12-col">
+                        <div class="mdl-grid">
+
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="shh" min="0" max="1000"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="sh" min="0" max="100"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="sm" min="0" max="60"
+                                        value="0" step="1">
+                                </p>
+                            </div>
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <p style="width:100%">
+                                    <input class="mdl-slider mdl-js-slider" type="range" id="ss" min="0" max="60"
+                                        value="10" step="1">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mdl-grid">
+                    <div class="mdl-cell mdl-cell--12-col buttons">
+                        <button id="stop" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+                            <i class="material-icons">stop</i>
+                        </button>
+                        <button id="play"
+                            class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+                            <i class="material-icons">play_arrow</i>
+                        </button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+        </main>
+    </div>
+
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/material.min.js"></script>
+</body>
+
 </html>
